[gd_scene load_steps=17 format=3 uid="uid://dvhcm5mi3mgj3"]

[ext_resource type="Script" uid="uid://1disr3p05voj" path="res://GameScenes/SelectCharacter/character_select.gd" id="1_xu33s"]
[ext_resource type="Texture2D" uid="uid://cumvectu7lb8o" path="res://Assets/Sprites/SelectCharacter/Backhround.png" id="2_w8esb"]
[ext_resource type="Texture2D" uid="uid://4ijw037ryn82" path="res://Assets/Sprites/SelectCharacter/ConfirmButton.png" id="3_o114n"]
[ext_resource type="Texture2D" uid="uid://b8xlcfj428i58" path="res://Assets/Sprites/SelectCharacter/SpriteWoman.png" id="4_aqvuk"]
[ext_resource type="Texture2D" uid="uid://b4ax5lp1no7kh" path="res://Assets/Sprites/SelectCharacter/SpriteMan.png" id="5_o5fud"]
[ext_resource type="Texture2D" uid="uid://bc54ulrcsf8hb" path="res://Assets/Sprites/SelectCharacter/ButtosToggle-Recovered.png" id="6_e1haj"]
[ext_resource type="Texture2D" uid="uid://xq8f3grwfnhy" path="res://Assets/Sprites/SelectCharacter/BackButton.png" id="7_n8ccv"]
[ext_resource type="PackedScene" uid="uid://b8opvrf2ka2hs" path="res://Assets/Sprites/Animation/color_rect.tscn" id="9_o114n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ow3r"]
atlas = ExtResource("3_o114n")
region = Rect2(305.15604, 78.96038, 93.74591, 45.819633)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydvcb"]
atlas = ExtResource("3_o114n")
region = Rect2(404.70837, 78.69358, 90.059265, 46.34629)

[sub_resource type="AtlasTexture" id="AtlasTexture_fda7x"]
atlas = ExtResource("6_e1haj")
region = Rect2(339.74774, 81.71491, 59.373657, 58.602562)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl62y"]
atlas = ExtResource("6_e1haj")
region = Rect2(434.36935, 84.73075, 58.309418, 53.848595)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm6am"]
atlas = ExtResource("6_e1haj")
region = Rect2(338.94003, 82.20487, 60.530273, 55.90377)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysa27"]
atlas = ExtResource("6_e1haj")
region = Rect2(433.12173, 83.44579, 60.539825, 55.44175)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcl1w"]
atlas = ExtResource("7_n8ccv")
region = Rect2(308.57794, 86.414734, 58.65103, 51.70868)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2ypp"]
atlas = ExtResource("7_n8ccv")
region = Rect2(368.89752, 86.830826, 59.847992, 50.990494)

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xu33s")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w8esb")

[node name="ConfirmButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 903.0
offset_top = 520.0
offset_right = 1135.0
offset_bottom = 636.0
texture_normal = SubResource("AtlasTexture_4ow3r")
texture_hover = SubResource("AtlasTexture_ydvcb")
ignore_texture_size = true
stretch_mode = 0

[node name="Female_Chef" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 95.0
offset_right = 916.0
offset_bottom = 390.0
texture = ExtResource("4_aqvuk")
expand_mode = 1

[node name="Male_Chef" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 98.0
offset_right = 532.0
offset_bottom = 388.0
texture = ExtResource("5_o5fud")
stretch_mode = 5

[node name="Male_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 353.0
offset_right = 449.0
offset_bottom = 466.0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_fda7x")
texture_pressed = SubResource("AtlasTexture_pl62y")
texture_hover = SubResource("AtlasTexture_pl62y")
ignore_texture_size = true
stretch_mode = 5

[node name="FemaleButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.65300006
anchor_bottom = 0.5
offset_left = 712.0
offset_top = 365.0
offset_right = 79.74396
offset_bottom = 147.0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_dm6am")
texture_pressed = SubResource("AtlasTexture_ysa27")
texture_hover = SubResource("AtlasTexture_ysa27")
ignore_texture_size = true
stretch_mode = 5

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 11.0
offset_right = 122.0
offset_bottom = 108.0
texture_normal = SubResource("AtlasTexture_kcl1w")
texture_hover = SubResource("AtlasTexture_v2ypp")
ignore_texture_size = true
stretch_mode = 0

[node name="FadeTransition" parent="." instance=ExtResource("9_o114n")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
